// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render > renders Astro component (full) 1`] = `
"---
// Generated by MistCSS, do not modify
import type { HTMLAttributes } from 'astro/types'
import './component.mist.css'

interface Props extends HTMLAttributes<'div'> { attr?: 'a' | 'b', attrFooBar?: 'foo-bar', isFoo?: boolean, propFoo?: string, propBar?: string }

const { attr, attrFooBar, isFoo, propFoo, propBar, ...props } = Astro.props
---

<div {...props} data-attr={attr} data-attr-foo-bar={attrFooBar} data-is-foo={isFoo} style={{ '--prop-foo': propFoo, '--prop-bar': propBar }} class="foo" ><slot /></div>
"
`;

exports[`render > renders Astro component (minimal) 1`] = `
"---
// Generated by MistCSS, do not modify
import type { HTMLAttributes } from 'astro/types'
import './component.mist.css'

interface Props extends HTMLAttributes<'div'> {  }

const { ...props } = Astro.props
---

<div {...props} class="foo" ><slot /></div>
"
`;

exports[`render > renders Astro component (void element) 1`] = `
"---
// Generated by MistCSS, do not modify
import type { HTMLAttributes } from 'astro/types'
import './component.mist.css'

interface Props extends HTMLAttributes<'hr'> {  }

const { ...props } = Astro.props
---

<hr {...props} class="foo" />
"
`;
